--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -7,12 +7,18 @@ username = "<?php echo @$db['user']; ?>"
 password = "<?php echo @$db['pass']; ?>"
 dbname = "<?php echo trim(@$db['path'], '/'); ?>"
 port = <?php echo @$db['port'].PHP_EOL; ?>
+charset = "utf8mb4"
+default_charset = "utf8mb4"
+enable_ssl = 1
+ssl_ca = "/usr/share/ca-certificates/Scalingo/scalingo-database.pem"
 
 [General]
 assume_secure_protocol = 1
 proxy_client_headers[] = HTTP_X_FORWARDED_FOR
 force_ssl = 1
-always_load_commands_from_plugin=DbCommands,AdminCommands,LicenseKeyCommands
+<?php if (getenv('MATOMO_PLUGINS')) { ?>
+always_load_commands_from_plugin=<?php echo getenv('MATOMO_PLUGINS') ?>
+<?php } ?>
 enable_trusted_host_check = 0
 <?php if (getenv('MATOMO_MAINTENANCE') == 'true') { ?>
 maintenance_mode = 1 
